enable manual trigger

--- a/.github/workflows/astria-build-and-publish-image.yml
+++ b/.github/workflows/astria-build-and-publish-image.yml
@@ -1,9 +1,9 @@
 name: Build and Publish Docker image
 on:
+  workflow_dispatch:
   push:
     branches:
       - astria # Running this job only for astria branch
-
 jobs:
   build-and-publish-latest:
     runs-on: ubuntu-latest
