--- a/.github/workflows/astria-build-and-publish-image.yml
+++ b/.github/workflows/astria-build-and-publish-image.yml
@@ -1,9 +1,21 @@
 name: Build and Publish Docker image
+
+# Trigger on pushes to astria branch, new semantic version tags, and pull request updates
 on:
   workflow_dispatch:
   push:
     branches:
-      - astria # Running this job only for astria branch
+      - "astria"
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
+  # trigger on pull request updates when target is `astria` branch
+  pull_request:
+    branches:
+      - "astria"
+
 jobs:
   build-and-publish-latest:
     runs-on: ubuntu-latest
@@ -13,6 +25,20 @@ jobs:
         with:
           go-version: "^1.20.x" # The Go version to download (if necessary) and use.
       - run: go version
+
+      - name: Set image tag
+        id: set-image-tag
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            TAG=${GITHUB_REF#refs/tags/}
+          elif [[ $GITHUB_REF == refs/heads/* ]]; then
+            TAG=latest
+          elif [[ $GITHUB_REF == refs/pull/* ]]; then
+            TAG=${GITHUB_SHA}
+          else
+            TAG=unrecognized
+          fi
+          echo "::set-output name=tag::$TAG"
 
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
@@ -25,6 +51,6 @@ jobs:
             --build-arg COMMIT=${GITHUB_SHA} \
             --build-arg VERSION=0.1 \
             --build-arg BUILDNUM=${GITHUB_RUN_NUMBER} \
-            --tag ghcr.io/astriaorg/go-ethereum:latest .
+            --tag ghcr.io/astriaorg/go-ethereum:${{ steps.set-image-tag.outputs.tag }} .
       - name: Push latest Docker image
-        run: docker push ghcr.io/astriaorg/go-ethereum:latest
+        run: docker push ghcr.io/astriaorg/go-ethereum:${{ steps.set-image-tag.outputs.tag }}
