--- a/.github/workflows/astria-build-and-publish-image.yml
+++ b/.github/workflows/astria-build-and-publish-image.yml
@@ -20,37 +20,38 @@ jobs:
   build-and-publish-latest:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2 # Checking out the repo
+      # Checking out the repo
+      - uses: actions/checkout@v2
+      # Setting up Go
       - uses: actions/setup-go@v4
         with:
           go-version: "^1.20.x" # The Go version to download (if necessary) and use.
       - run: go version
 
-      - name: Set image tag
-        id: set-image-tag
-        run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            TAG=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            TAG=latest
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            TAG=${GITHUB_SHA}
-          else
-            TAG=unrecognized
-          fi
-          echo "::set-output name=tag::$TAG"
-
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-
-      # TODO - build for amd64 and arm64?
-      # FIXME - version needs to be autoincrement, probably from git tags?
-      - name: Build latest Docker image
-        run: |
-          docker build \
-            --build-arg COMMIT=${GITHUB_SHA} \
-            --build-arg VERSION=0.1 \
-            --build-arg BUILDNUM=${GITHUB_RUN_NUMBER} \
-            --tag ghcr.io/astriaorg/go-ethereum:${{ steps.set-image-tag.outputs.tag }} .
-      - name: Push latest Docker image
-        run: docker push ghcr.io/astriaorg/go-ethereum:${{ steps.set-image-tag.outputs.tag }}
+      # Generate correct tabs and labels
+      - name: Docker metadata
+        id: metadata
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/astriaorg/go-ethereum
+          tags: |
+            type=ref,event=pr
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=sha
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
